@@ -74,9 +74,9 @@ int main(int argc, char *argv[]) {
 	OmSettings param;
 	param.set("backend", "inmemory");
 
-	std::vector<IRDatabase> dbs;
+	std::vector<Database> dbs;
 	dbs.push_back(DatabaseBuilder::create(param));
-	auto_ptr<IRDatabase> db(DatabaseBuilder::create(dbs));
+	auto_ptr<Database> db(DatabaseBuilder::create(dbs));
 	RefCntPtr<MultiDatabase> mdb(dynamic_cast<MultiDatabase *>(db.get()));
 	if (!mdb.get()) {
 	    throw OmDatabaseError("Invalid database");
